Bug 192129 - system settings crash in the display settings
Summary: system settings crash in the display settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_randr (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Gustavo Pichorim Boiko
URL:
Keywords:
: 157549 183941 185926 189537 192407 198108 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-09 13:53 UTC by firwen
Modified: 2009-08-08 14:21 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description firwen 2009-05-09 13:53:27 UTC
Version:            (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

I use a kubuntu 9.04 with kde 4.2 and nvidia proprietary drivers 180( my graphic card is a 8600MGT ).

In the system-settings when I click on the display-setting, the system-settings instanannely crash with SIGSEGV 11.
I think that the problem is lied to the presence of the nvidia proprietary drivers because they don't support Xrandr secifications.
Comment 1 firwen 2009-05-09 13:55:21 UTC
This is the backtrace associated with the bug :

Application : Configuration du système (systemsettings), signal SIGSEGV
[Current thread is 0 (LWP 8002)]

Thread 2 (Thread 0xa78a2b90 (LWP 9072)):
#0  0xb7fca430 in __kernel_vsyscall ()
#1  0xb63ae412 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb676f344 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xa84bfae3 in ?? () from /usr/lib/libxine.so.1

Thread 1 (Thread 0xb5f6f700 (LWP 8002)):
[KCrash Handler]
#6  LegacyRandRConfig::load (this=0xffe7b800) at /build/buildd/kdebase-workspace-4.2.2/kcontrol/randr/legacyrandrconfig.cpp:67
#7  0xa66e34db in KRandRModule::load (this=0x873bda8) at /build/buildd/kdebase-workspace-4.2.2/kcontrol/randr/krandrmodule.cpp:106
#8  0xb7a98a3b in KCModule::qt_metacall (this=0x873bda8, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x8774580) at /build/buildd/kde4libs-4.2.2/obj-i486-linux-gnu/kdeui/kcmodule.moc:78
#9  0xa66e2962 in KRandRModule::qt_metacall (this=0x873bda8, _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0x8774580)
    at /build/buildd/kdebase-workspace-4.2.2/obj-i486-linux-gnu/kcontrol/randr/krandrmodule.moc:58
#10 0xb74a18fb in QMetaCallEvent::placeMetaCall (this=0x8772a88, object=0x873bda8) at kernel/qobject.cpp:489
#11 0xb74a33a0 in QObject::event (this=0x873bda8, e=0x8772a88) at kernel/qobject.cpp:1118
#12 0xb6a9b440 in QWidget::event (this=0x873bda8, event=0x8772a88) at kernel/qwidget.cpp:7913
#13 0xb6a44e9c in QApplicationPrivate::notify_helper (this=0x81a3998, receiver=0x873bda8, e=0x8772a88) at kernel/qapplication.cpp:4084
#14 0xb6a4d282 in QApplication::notify (this=0xbfde7d24, receiver=0x873bda8, e=0x8772a88) at kernel/qapplication.cpp:4049
#15 0xb79e194d in KApplication::notify (this=0xbfde7d24, receiver=0x873bda8, event=0x8772a88) at /build/buildd/kde4libs-4.2.2/kdeui/kernel/kapplication.cpp:307
#16 0xb7492a3b in QCoreApplication::notifyInternal (this=0xbfde7d24, receiver=0x873bda8, event=0x8772a88) at kernel/qcoreapplication.cpp:602
#17 0xb7493695 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8174b38) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#18 0xb749388d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1132
#19 0xb74be7ef in postEventSourceDispatch (s=0x8193538) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#20 0xb62d9b88 in IA__g_main_context_dispatch (context=0x8192558) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:1814
#21 0xb62dd0eb in g_main_context_iterate (context=0x8192558, block=1, dispatch=1, self=0x81a3870) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2448
#22 0xb62dd268 in IA__g_main_context_iteration (context=0x8192558, may_block=1) at /build/buildd/glib2.0-2.20.1/glib/gmain.c:2511
#23 0xb74be438 in QEventDispatcherGlib::processEvents (this=0x8178138, flags={i = -1075938296}) at kernel/qeventdispatcher_glib.cpp:323
#24 0xb6ae6365 in QGuiEventDispatcherGlib::processEvents (this=0x8178138, flags={i = -1075938248}) at kernel/qguieventdispatcher_glib.cpp:202
#25 0xb749106a in QEventLoop::processEvents (this=0xbfde7cb0, flags={i = -1075938184}) at kernel/qeventloop.cpp:149
#26 0xb74914aa in QEventLoop::exec (this=0xbfde7cb0, flags={i = -1075938120}) at kernel/qeventloop.cpp:200
#27 0xb7493959 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:880
#28 0xb6a44d17 in QApplication::exec () at kernel/qapplication.cpp:3553
#29 0x08056c3b in main (argc=5, argv=0xbfde7f64) at /build/buildd/kdebase-workspace-4.2.2/systemsettings/main.cpp:67
Comment 2 Christoph Feck 2009-05-09 18:16:53 UTC
SVN commit 965730 by cfeck:

Do not access uninitialized config variables

When X11 does not report RANDR extension, we neither create the
m_config, nor the m_legacyConfig variables, so do not access them
later.

BUG: 192129
CCMAIL: gustavo.boiko@kdemail.net


 M  +12 -0     krandrmodule.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=965730
Comment 3 Christoph Feck 2009-05-09 18:18:47 UTC
SVN commit 965732 by cfeck:

Do not access uninitialized config variables (backport r965730)

CCBUG: 192129


 M  +12 -0     krandrmodule.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=965732
Comment 4 Christoph Feck 2009-05-09 18:25:48 UTC
*** Bug 185926 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2009-05-09 18:29:23 UTC
*** Bug 157549 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2009-05-09 18:40:02 UTC
*** Bug 183941 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2009-05-09 18:41:16 UTC
*** Bug 189537 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-05-12 14:51:53 UTC
*** Bug 192407 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2009-08-08 14:21:00 UTC
*** Bug 198108 has been marked as a duplicate of this bug. ***