Do not access uninitialized config variables

When X11 does not report RANDR extension, we neither create the
m_config, nor the m_legacyConfig variables, so do not access them
later.

BUG: 192129
CCMAIL: gustavo.boiko@kdemail.net

svn path=/trunk/KDE/kdebase/workspace/; revision=965730